<resources>

    <string name="app_name">Easy Portfolio</string>
    <string name="portfolios">Portfolios</string>
    <string name="add_record">Add Record</string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="add_group">Add Group</string>
    <string name="record">Record</string>
    <string name="info">Info</string>
    <string name="portfolio_name">Portfolio Name&#8230;</string>
    <string name="portfolios_count_pattern">%1$d Portfolio(s)</string>
    <string name="group_name">Group Name&#8230;</string>
    <string name="select_portfolio">Select Portfolio</string>
    <string name="groups_empty">Group list is empty</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search&#8230;</string>
    <string name="group">Group</string>
    <string name="none_group">None group</string>
    <string name="portfolio">Portfolio</string>
    <string name="confirm_delete_group">Are you sure you want to delete this group?</string>
    <string name="confirm_delete_portfolio">Are you sure you want to delete this portfolio?</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="portfolio_not_selected">Portfolio is not selected</string>
    <string name="select_action">Select Action</string>
    <string name="videos">Videos</string>
    <string name="select_option">Select option:</string>
    <string name="save_video_error">Error occured while saving video</string>
    <string name="importing">Importing&#8230;</string>
    <string name="new_video">New Video</string>
    <string name="video_name">Video name&#8230;</string>
    <string name="confirm_delete_video">Are you sure you want to delete this video?</string>
    <string name="images">Images</string>
    <string name="save_image_error">Error occured while saving image</string>
    <string name="new_image">New Image</string>
    <string name="image_name">Image name&#8230;</string>
    <string name="confirm_delete_image">Are you sure you want to delete this image?</string>
    <string name="confirm_delete_url">Are you sure you want to delete this url?</string>
    <string name="confirm_delete_doc">Are you sure you want to delete this document?</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="notes">Notes</string>
    <string name="audio_files">Audio Files</string>
    <string name="urls">URLs</string>
    <string name="add_url_str">Add URL</string>
    <string name="add_doc_str">Add Documents</string>
    <string name="documents">Documents</string>
    <string name="enter_url_address">Enter URL Address</string>
    <string name="address_hint">URL Address &#8230;</string>
    <string name="select_web_app">Select Web App</string>
    <string name="export">Export</string>
    <string name="add_video">Add\nVideo</string>
    <string name="add_image">Add\nImage</string>
    <string name="add_audio">Add\nAudio</string>
    <string name="add_note">Add\nNote</string>
    <string name="add_url">Add\nURL</string>
    <string name="add_doc">Add\nDoc</string>
    <string name="take_video">Take Video</string>
    <string name="take_image">Take Image</string>
    <string name="select_from_library">Select From Library</string>
    <string name="my_dropbox">My Dropbox</string>
    <string name="download">Download</string>
    <string name="selected_pattern">%1$d File(s) Selected</string>
    <string name="close">Close</string>
    <string name="loading">Loading &#8230;</string>
    <string name="no_files_selected">Please select files to be downloaded</string>
    <string name="download_error">An error occurred while downloading files</string>
    <string name="upload_error">An error occurred while uploading files</string>
    <string name="downloading">Downloading &#8230;</string>
    <string name="download_pattern">Downloading %1$s\n%2$s out of %3$s</string>
    <string name="upload_pattern">Uploading %1$s\n%2$s out of %3$s</string>
    <string name="new_audio">New Audio</string>
    <string name="no_recorded_audios">No Audio Files Recorded Yet</string>
    <string name="no_audio_recorded">No recorded audio file</string>
    <string name="no_checked_records">No selected records to upload</string>
    <string name="export_to_dropbox">Export to dropbox?</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="no_connection">No internet</string>
    
    <string name="add_image_error">Error while saving image</string>
    
    <string name="more_apps">More Apps</string>
    <string name="support">Support</string>
    <string name="help_and_support">Help And Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="rate_this_application">Rate This Application</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="tell_a_friend">Tell A Friend</string>
    <string name="watch_video_tutorial">Watch Video Tutorial</string>
    <string name="email_app_select">Select Email Application</string>
    
    <string name="pe_geek">The PE Geek</string>
    <string name="fitness_tests">Fitness Tests</string>
    <string name="pe_games">PE Games</string>
    <string name="sports_rules">Sports Rules</string>
    <string name="swim_games">SwimGames</string>
    
    <string name="pe_geek_desc">The PE Geek app is the one stop shop for teachers interested in utilising emerging technologies within Physical Education.</string>
    <string name="fitness_tests_desc">Fitness Tests is the quick, easy handbook guide for PE teachers, sports coaches, personal trainers or anyone looking to measure their fitness.</string>
    <string name="pe_games_desc">PE Games is the premier app for PE Teachers on the app store, containing over 100 games in a variety of categories.</string>
    <string name="sports_rules_desc">Sports Rules is the perfect app for PE Teachers, Coaches, Athletes or anyone interested in swift easy reference of popular sports and their associated rules.</string>
    <string name="swim_games_desc">SwimGames is a quick reference guide for a variety of games to play in the swimming pool. Teachers, Instructors and Parents can confidently and quickly look up fun games to play in their classes.</string>
    
    <string name="pe_geek_link">https://play.google.com/store/apps/details?id=com.thepegeek.android</string>
    <string name="fitness_tests_link">https://play.google.com/store/apps/details?id=com.thepegeekapps.fittest</string>
    <string name="pe_games_link">https://play.google.com/store/apps/details?id=com.pe.games</string>
    <string name="sports_rules_link">https://play.google.com/store/apps/details?id=com.sportsrules</string>
    <string name="swim_games_link">https://play.google.com/store/apps/details?id=com.swimgames</string>
    
    <string name="tell_prewritten_message">checkout the apps by The PE Geek on the Google Play Store <a>https://play.google.com/store/apps/developer?id=The+PE+Geek&amp;hl=en</a></string>
    <string name="report_bug_template">Please describe steps to reproduce a bug:\n\n---------\nDevice: %1$s %2$s;\nOS Version:%3$s</string>
    
    <string-array name="portfolio_record_types">
        <item>Videos</item>
        <item>Images</item>
        <item>Audio Files</item>
        <item>Notes</item>
        <item>URLs</item>
        <item>Documents</item>
    </string-array>

</resources>